make auth controller